@@ -39,6 +39,9 @@ AC_PACKAGE_GLOBALS(xfsprogs)
 AC_PACKAGE_UTILITIES(xfsprogs)
 AC_MULTILIB($enable_lib64)
 
+AC_PACKAGE_NEED_AIO_H
+AC_PACKAGE_NEED_LIO_LISTIO
+
 AC_PACKAGE_NEED_UUID_H
 AC_PACKAGE_NEED_UUIDCOMPARE
 
