@@ -1,3 +1,7 @@
+[cvs]
+	- More updates to repair/libxfs for improving performance
+	- Incorporate librt into the build process for lio_listio
+
 xfsprogs-2.8.1 (29 May 2006)
 	- Fix endianness issues on FreeBSD.
 
